--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <div>
-            <label for="input">Celsius</label>
-            <input type="text" id="input">
+        <div class="converter">
+            <p>Celsius to Fahrenheit (ºC to ºF) conversion calculator</p>
+            <input type="number" id="input" placeholder="°C">
+            <div class="buttons">
+                <button>Swap units</button>
+                <button>Calculate</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
