--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container">
         <div class="converter">
             <p>Celsius to Fahrenheit (ºC to ºF) conversion calculator</p>
-            <input type="number" id="input" placeholder="°C">
+            <input type="number" id="input" placeholder="°C" max="140" min="-135">
             <div class="buttons">
-                <button>Swap units</button>
-                <button>Calculate</button>
+                <button id="swap">Swap units</button>
+                <button id="calculate">Calculate</button>
             </div>
         </div>
     </div>
